--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ h1 {
 
 .center-view {
     text-align: center;
+    align-items: center;
     padding: 30px;
 }
 
@@ -155,4 +156,12 @@ h1 {
     text-align: justify;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
+}
+
+.the-end {
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-family: 'Edu NSW ACT Foundation', cursive;
+    font-size: 15px;
 }
